--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <i class="fa  {{menu.class}}"></i> {{menu.text}}
         </md-button>
     </md-toolbar>
-    
+    <div flex layout="row" layout-align="center center" class="content-view">
+        <div ng-view flex="80" flex-md="90" flex-sm="95" layout="row">
+            <noscript style="text-align:center;"><b>Enable JavaScript jackass!</b></noscript>
+        </div>
+    </div> 
+   
 <!-- Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
@@ -27,7 +32,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 <script src="bower_components/angular-timeline/dist/angular-timeline.js"></script>
-<script src="js/libs/angular-typewriter.js"></script>    
-<script src="js/app.js"></script>    
+<script src="js/app.js"></script>
+<script src="js/intro.js"></script>    
 </body>
 </html>
