--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/main.css">
     
     <title>Todo App</title>
@@ -34,6 +35,9 @@
       </div>
   </div>
 </div>
+    <h4 align="center">Here is the link to the <a href="https://github.com/mbj36/To-do-List">Github <i class="fa fa-github"></i></a> repository.</br>
+Feel free to create a PR. 
+</h4>
 
     <script src="js/app.js"></script>
 </body>
