--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input  style="height:50px;" type="text" ng-model="todoText" class="form-control"
              placeholder="What needs to be done ?">
         <br>
-        <p align="center"><input type="button" class="btn btn-info" value="add"></p>
+        <p align="center"><input type="submit" class="btn btn-info" value="add"></p>
     </form>
       <div class="list-group">
     <ol>
