--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input  style="height:50px;" type="text" ng-model="todoText" class="form-control"
              placeholder="What needs to be done ?">
         <br>
-        <p align="center"><input type="submit" class="btn btn-info" value="add"></p>
+        <p align="center"><input type="submit" class="btn btn-info" style="rotatebutton" value="add"></p>
     </form>
       <div class="list-group">
     <ol>
@@ -31,7 +31,7 @@
       </li>
     </ol>
            <div class="list-group-item" style="text-align:center;">{{remaining()}} of {{todos.length}} items left</br>
-               <a href="" ng-click="archive()">Clear completed items</a></div>
+               <a href="" ng-click="archive()" style="rotatebutton">Clear completed items</a></div>
       </div>
   </div>
 </div>
